--- a/index.html
+++ b/index.html
@@ -2,11 +2,29 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="/src/media/favicon.ico"
+      sizes="16x16"
+    />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="/src/media/favicon.ico"
+      sizes="32x32"
+    />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="/src/media/favicon.ico"
+      sizes="64x64"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@500&family=Manrope:wght@400;500;600;700&family=Poppins:wght@700&display=swap"
-      rel="stylesheet" />
+      rel="stylesheet"
+    />
     <title>Pet Support</title>
   </head>
   <body>
@@ -15,5 +33,3 @@
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
-
-
